--- a/Client/src/resources/userInfo.fxml
+++ b/Client/src/resources/userInfo.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
@@ -12,17 +13,18 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="411.0" prefWidth="487.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.UserInfoController">
+<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="433.0" prefWidth="495.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.UserInfoController">
    <children>
       <GridPane fx:id="grid" hgap="5.0" layoutX="201.0" layoutY="175.0" prefHeight="480.0" prefWidth="640.0" vgap="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="318.0" minWidth="10.0" prefWidth="94.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="549.0" minWidth="10.0" prefWidth="368.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="318.0" minWidth="10.0" prefWidth="90.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="549.0" minWidth="10.0" prefWidth="380.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -60,12 +62,12 @@
                <font>
                   <Font size="14.0" />
                </font></TextField>
-            <Label fx:id="colorLabel" alignment="CENTER_RIGHT" contentDisplay="CENTER" prefHeight="122.0" prefWidth="195.0" text="Text Color: " textAlignment="RIGHT" GridPane.rowIndex="3">
+            <Label fx:id="colorLabel" alignment="CENTER_RIGHT" contentDisplay="CENTER" prefHeight="122.0" prefWidth="195.0" text="Text Color: " textAlignment="RIGHT" GridPane.rowIndex="4">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <RadioButton fx:id="blackButton" mnemonicParsing="false" prefHeight="61.0" prefWidth="619.0" selected="true" text="Black" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <RadioButton fx:id="blackButton" mnemonicParsing="false" prefHeight="61.0" prefWidth="619.0" selected="true" text="Black" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <toggleGroup>
                   <ToggleGroup fx:id="color" />
                </toggleGroup>
@@ -73,32 +75,32 @@
                   <Font size="14.0" />
                </font>
             </RadioButton>
-            <RadioButton fx:id="blueButton" mnemonicParsing="false" prefHeight="61.0" prefWidth="619.0" text="Blue" textFill="BLUE" toggleGroup="$color" GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <RadioButton fx:id="blueButton" mnemonicParsing="false" prefHeight="61.0" prefWidth="619.0" text="Blue" textFill="BLUE" toggleGroup="$color" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <font>
                   <Font size="14.0" />
                </font>
             </RadioButton>
-            <RadioButton fx:id="greenButton" mnemonicParsing="false" prefHeight="61.0" prefWidth="619.0" text="Green" textFill="GREEN" toggleGroup="$color" GridPane.columnIndex="1" GridPane.rowIndex="5">
+            <RadioButton fx:id="greenButton" mnemonicParsing="false" prefHeight="61.0" prefWidth="619.0" text="Green" textFill="GREEN" toggleGroup="$color" GridPane.columnIndex="1" GridPane.rowIndex="6">
                <font>
                   <Font size="14.0" />
                </font>
             </RadioButton>
-            <RadioButton fx:id="purpleButton" mnemonicParsing="false" prefHeight="61.0" prefWidth="619.0" text="Purple" textFill="PURPLE" toggleGroup="$color" GridPane.columnIndex="1" GridPane.rowIndex="6">
+            <RadioButton fx:id="purpleButton" mnemonicParsing="false" prefHeight="61.0" prefWidth="619.0" text="Purple" textFill="PURPLE" toggleGroup="$color" GridPane.columnIndex="1" GridPane.rowIndex="7">
                <font>
                   <Font size="14.0" />
                </font>
             </RadioButton>
-            <RadioButton fx:id="redButton" mnemonicParsing="false" prefHeight="61.0" prefWidth="619.0" text="Red" textFill="RED" toggleGroup="$color" GridPane.columnIndex="1" GridPane.rowIndex="7">
+            <RadioButton fx:id="redButton" mnemonicParsing="false" prefHeight="61.0" prefWidth="619.0" text="Red" textFill="RED" toggleGroup="$color" GridPane.columnIndex="1" GridPane.rowIndex="8">
                <font>
                   <Font size="14.0" />
                </font>
             </RadioButton>
-            <Label fx:id="saveLabel" alignment="CENTER_RIGHT" contentDisplay="CENTER" prefHeight="122.0" prefWidth="195.0" text="Save Options: " textAlignment="RIGHT" GridPane.rowIndex="8">
+            <Label fx:id="saveLabel" alignment="CENTER_RIGHT" contentDisplay="CENTER" prefHeight="122.0" prefWidth="195.0" text="Save Options: " textAlignment="RIGHT" GridPane.rowIndex="9">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <RadioButton fx:id="saveButton" mnemonicParsing="false" prefHeight="61.0" prefWidth="619.0" text="Save Settings?" GridPane.columnIndex="1" GridPane.rowIndex="8">
+            <RadioButton fx:id="saveButton" mnemonicParsing="false" prefHeight="61.0" prefWidth="619.0" text="Save Settings?" GridPane.columnIndex="1" GridPane.rowIndex="9">
                <font>
                   <Font size="14.0" />
                </font>
@@ -106,21 +108,31 @@
                   <ToggleGroup fx:id="save" />
                </toggleGroup>
             </RadioButton>
-            <RadioButton fx:id="deletButton" mnemonicParsing="false" prefHeight="61.0" prefWidth="619.0" text="Delete Settings?" toggleGroup="$save" GridPane.columnIndex="1" GridPane.rowIndex="9">
+            <RadioButton fx:id="deletButton" mnemonicParsing="false" prefHeight="61.0" prefWidth="619.0" text="Delete Settings?" toggleGroup="$save" GridPane.columnIndex="1" GridPane.rowIndex="10">
                <font>
                   <Font size="14.0" />
                </font>
             </RadioButton>
-            <Button fx:id="submit" mnemonicParsing="false" prefHeight="108.0" prefWidth="173.0" text="Submit" GridPane.rowIndex="10">
+            <Button fx:id="submit" mnemonicParsing="false" prefHeight="108.0" prefWidth="173.0" text="Submit" GridPane.rowIndex="11">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
-            <Label fx:id="notFinished" prefHeight="122.0" prefWidth="250.0" textAlignment="RIGHT" GridPane.columnIndex="1" GridPane.rowIndex="10">
+            <Label fx:id="notFinished" prefHeight="122.0" prefWidth="250.0" textAlignment="RIGHT" GridPane.columnIndex="1" GridPane.rowIndex="11">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
+            <Label fx:id="passwordLabel" alignment="CENTER_RIGHT" contentDisplay="CENTER" layoutX="10.0" layoutY="76.0" prefHeight="122.0" prefWidth="195.0" text="Password:" textAlignment="RIGHT" GridPane.rowIndex="3">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <PasswordField fx:id="passwordText" promptText="Enter password for the server..." GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </PasswordField>
          </children>
       </GridPane>
    </children>
