--- a/Client/src/resources/userInfo.fxml
+++ b/Client/src/resources/userInfo.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.RadioButton?>
@@ -25,7 +26,8 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="22.0" minHeight="10.0" prefHeight="21.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="33.0" minHeight="10.0" prefHeight="33.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -62,12 +64,12 @@
                <font>
                   <Font size="14.0" />
                </font></TextField>
-            <Label fx:id="colorLabel" alignment="CENTER_RIGHT" contentDisplay="CENTER" prefHeight="122.0" prefWidth="195.0" text="Text Color: " textAlignment="RIGHT" GridPane.rowIndex="4">
+            <Label fx:id="colorLabel" alignment="CENTER_RIGHT" contentDisplay="CENTER" prefHeight="122.0" prefWidth="195.0" text="Text Color: " textAlignment="RIGHT" GridPane.rowIndex="5">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <RadioButton fx:id="blackButton" mnemonicParsing="false" prefHeight="61.0" prefWidth="619.0" selected="true" text="Black" GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <RadioButton fx:id="blackButton" mnemonicParsing="false" prefHeight="61.0" prefWidth="619.0" selected="true" text="Black" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <toggleGroup>
                   <ToggleGroup fx:id="color" />
                </toggleGroup>
@@ -75,32 +77,32 @@
                   <Font size="14.0" />
                </font>
             </RadioButton>
-            <RadioButton fx:id="blueButton" mnemonicParsing="false" prefHeight="61.0" prefWidth="619.0" text="Blue" textFill="BLUE" toggleGroup="$color" GridPane.columnIndex="1" GridPane.rowIndex="5">
+            <RadioButton fx:id="blueButton" mnemonicParsing="false" prefHeight="61.0" prefWidth="619.0" text="Blue" textFill="BLUE" toggleGroup="$color" GridPane.columnIndex="1" GridPane.rowIndex="6">
                <font>
                   <Font size="14.0" />
                </font>
             </RadioButton>
-            <RadioButton fx:id="greenButton" mnemonicParsing="false" prefHeight="61.0" prefWidth="619.0" text="Green" textFill="GREEN" toggleGroup="$color" GridPane.columnIndex="1" GridPane.rowIndex="6">
+            <RadioButton fx:id="greenButton" mnemonicParsing="false" prefHeight="61.0" prefWidth="619.0" text="Green" textFill="GREEN" toggleGroup="$color" GridPane.columnIndex="1" GridPane.rowIndex="7">
                <font>
                   <Font size="14.0" />
                </font>
             </RadioButton>
-            <RadioButton fx:id="purpleButton" mnemonicParsing="false" prefHeight="61.0" prefWidth="619.0" text="Purple" textFill="PURPLE" toggleGroup="$color" GridPane.columnIndex="1" GridPane.rowIndex="7">
+            <RadioButton fx:id="purpleButton" mnemonicParsing="false" prefHeight="61.0" prefWidth="619.0" text="Purple" textFill="PURPLE" toggleGroup="$color" GridPane.columnIndex="1" GridPane.rowIndex="8">
                <font>
                   <Font size="14.0" />
                </font>
             </RadioButton>
-            <RadioButton fx:id="redButton" mnemonicParsing="false" prefHeight="61.0" prefWidth="619.0" text="Red" textFill="RED" toggleGroup="$color" GridPane.columnIndex="1" GridPane.rowIndex="8">
+            <RadioButton fx:id="redButton" mnemonicParsing="false" prefHeight="61.0" prefWidth="619.0" text="Red" textFill="RED" toggleGroup="$color" GridPane.columnIndex="1" GridPane.rowIndex="9">
                <font>
                   <Font size="14.0" />
                </font>
             </RadioButton>
-            <Label fx:id="saveLabel" alignment="CENTER_RIGHT" contentDisplay="CENTER" prefHeight="122.0" prefWidth="195.0" text="Save Options: " textAlignment="RIGHT" GridPane.rowIndex="9">
+            <Label fx:id="saveLabel" alignment="CENTER_RIGHT" contentDisplay="CENTER" prefHeight="122.0" prefWidth="195.0" text="Save Options: " textAlignment="RIGHT" GridPane.rowIndex="10">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <RadioButton fx:id="saveButton" mnemonicParsing="false" prefHeight="61.0" prefWidth="619.0" text="Save Settings?" GridPane.columnIndex="1" GridPane.rowIndex="9">
+            <RadioButton fx:id="saveButton" mnemonicParsing="false" prefHeight="61.0" prefWidth="619.0" text="Save Settings?" GridPane.columnIndex="1" GridPane.rowIndex="10">
                <font>
                   <Font size="14.0" />
                </font>
@@ -108,17 +110,17 @@
                   <ToggleGroup fx:id="save" />
                </toggleGroup>
             </RadioButton>
-            <RadioButton fx:id="deletButton" mnemonicParsing="false" prefHeight="61.0" prefWidth="619.0" text="Delete Settings?" toggleGroup="$save" GridPane.columnIndex="1" GridPane.rowIndex="10">
+            <RadioButton fx:id="deletButton" mnemonicParsing="false" prefHeight="61.0" prefWidth="619.0" text="Delete Settings?" toggleGroup="$save" GridPane.columnIndex="1" GridPane.rowIndex="11">
                <font>
                   <Font size="14.0" />
                </font>
             </RadioButton>
-            <Button fx:id="submit" mnemonicParsing="false" prefHeight="108.0" prefWidth="173.0" text="Submit" GridPane.rowIndex="11">
+            <Button fx:id="submit" mnemonicParsing="false" prefHeight="108.0" prefWidth="173.0" text="Submit" GridPane.rowIndex="12">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
-            <Label fx:id="notFinished" prefHeight="122.0" prefWidth="250.0" textAlignment="RIGHT" GridPane.columnIndex="1" GridPane.rowIndex="11">
+            <Label fx:id="notFinished" prefHeight="122.0" prefWidth="250.0" textAlignment="RIGHT" GridPane.columnIndex="1" GridPane.rowIndex="12">
                <font>
                   <Font size="14.0" />
                </font>
@@ -128,11 +130,21 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <PasswordField fx:id="passwordText" promptText="Enter password for the server..." GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <PasswordField id="text-field" fx:id="passwordText" promptText="Enter password for the server..." GridPane.columnIndex="1" GridPane.rowIndex="3">
                <font>
                   <Font size="14.0" />
                </font>
             </PasswordField>
+            <CheckBox fx:id="showPassword" mnemonicParsing="false" prefHeight="17.0" prefWidth="380.0" text="Show/Hide Password" GridPane.columnIndex="1" GridPane.rowIndex="4">
+               <font>
+                  <Font size="10.0" />
+               </font>
+            </CheckBox>
+            <TextField id="text-field" fx:id="plainTextPassword" promptText="Enter password for the server..." GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
          </children>
       </GridPane>
    </children>
